# ToyEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Application/: CMakeLists.txt  main.cpp
EditorApplication/: App.rc  CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/Source/: Common.h  CommonTypes.h  Core.h  DebugHelper.h  Hash.h  Logger.cpp  Logger.h  Scene.cpp  Scene.h
Engine/Editor/: CMakeLists.txt
Engine/Editor/Source/: AssetBrowser.cpp  AssetBrowser.h  AssetDatabase.cpp  AssetDatabase.h  AssetDropWidget.cpp  AssetDropWidget.h  Editor.h  EditorApplication.cpp  EditorApplication.h  ImGuiNodeEditor.h  MaterialEditor.cpp  MaterialEditor.h  MaterialEditorArithmeticNode.cpp  MaterialEditorArithmeticNode.h  MaterialEditorColorNode.cpp  MaterialEditorColorNode.h  MaterialEditorGlslResolver.cpp  MaterialEditorGlslResolver.h  MaterialEditorNode.cpp  MaterialEditorNode.h  MaterialEditorResolver.cpp  MaterialEditorResolver.h  MaterialEditorScalarNode.cpp  MaterialEditorScalarNode.h  MaterialModel.cpp  MaterialModel.h  MaterialNodeRegistry.h  Undo.h
Engine/Engine/: CMakeLists.txt
Engine/Engine/Resources/: FullscreenQuadWithoutUniforms.vert  HyperbolicPoincareWeave.frag  StaticClusteredGeometry.frag  StaticClusteredGeometry.vert  Triangle.frag  Triangle.vert  generated_splash_screen.DDS  gui.frag  gui.vert
Engine/Engine/Source/: Application.cpp  Application.h  BackgroundTasksSystem.h  DDSLoader.cpp  DDSLoader.h  DynamicFrameAllocator.h  Editor.h  ImageDataUploader.h  Material.cpp  Material.h  MaterialEditor.h  OutlineFeature.h  SceneLoader.cpp  SceneLoader.h  TaskSystem.cpp  TaskSystem.h  Texture2D.h  TextureManager.cpp  TextureManager.h  TexturePageExtractor.h
Engine/Engine/Tests/: CMakeLists.txt  DDSLoaderTest.cpp
Engine/GLSLRuntimeCompiler/: CMakeLists.txt
Engine/GLSLRuntimeCompiler/Source/: GlslRuntimeCompiler.cpp  GlslRuntimeCompiler.h
Engine/GLSLRuntimeCompiler/Tests/: CMakeLists.txt  CopyResources.cmake  ShaderCompilationTest.cpp
Engine/GLSLRuntimeCompiler/Tests/Resources/: compilationTest.frag  noopShader.frag  preprocessTest.glsl
Engine/GraphicsDebuger/: CMakeLists.txt
Engine/GraphicsDebuger/Source/: RenderDocCapture.h
Engine/GraphicsDebugger/: CMakeLists.txt
Engine/GraphicsDebugger/Source/: RenderDocCapture.cpp  RenderDocCapture.h
Engine/RenderInterface/: CMakeLists.txt
Engine/RenderInterface/Source/: BindGroupAllocator.cpp  BindGroupAllocator.h  CommandList.cpp  CommandList.h  CommandListBase.h  CommandListValidator.cpp  CommandListValidator.h  Handle.h  QueueType.h  RenderInterface.cpp  RenderInterface.h  RenderInterfaceBase.h  RenderInterfaceCommonTypes.h  RenderInterfaceTypes.h  RenderInterfaceValidator.cpp  RenderInterfaceValidator.h  Resource.h  SubmitBatch.h  SubmitBatchBase.h  SubmitDependency.h  ValidationCommon.h  VirtualTextureStreaming.h
Engine/RenderInterface/Source/VulkanRHI/: Vulkan.cpp  Vulkan.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanMappings.cpp  VulkanMappings.h  VulkanRenderInterface.cpp  VulkanRenderInterface.h  VulkanRenderInterfaceTypes.h  VulkanSubmitBatch.h
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/Resources/: HyperbolicPoincareWeave.frag  Lit.frag  StaticClusteredGeometry.frag  StaticClusteredGeometry.vert  Triangle.frag  gui.vert
Engine/Runtime/Source/: Application.cpp  Application.h  DDSLoader.h  DynamicFrameAllocator.cpp  Editor.h  Gui.cpp  Gui.h  ImGuiInclude.h  ImageDataUploader.h  MapIO.cpp  Material.cpp  Material.h  MaterialEditor.h  SceneLoader.h  Statistics.h  Texture2D.h  Utils.h
Engine/Runtime/Tests/: TexturePageExtractorTest.cpp
Engine/Runtime/Tests/Resources/: test_image_argb_8888.DDS  test_image_bc7.DDS
Engine/SDLWindow/: CMakeLists.txt
Engine/SDLWindow/Source/: SDLEventPolling.cpp  SDLWindow.cpp  SDLWindow.h
Engine/VulkanRenderInterface/: CMakeLists.txt
Engine/VulkanRenderInterface/Source/: FrameAllocator.h  Structs.h  UploadBufferRing.cpp  UploadBufferRing.h  Vulkan.cpp  Vulkan.h  VulkanBindGroupAllocator.cpp  VulkanBindGroupAllocator.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanMappings.cpp  VulkanMappings.h  VulkanRenderInterface.cpp  VulkanRenderInterface.h  vk.cpp  vk.h
Engine/Win32Window/: CMakeLists.txt
Engine/Win32Window/Source/: Win32EventPolling.cpp  Win32Window.cpp  Win32Window.h
Engine/Window/: CMakeLists.txt
Engine/Window/Source/: IOStateReset.cpp  Window.cpp  Window.h  WindowIO.h
Tools/: CMakeLists.txt
Tools/MeshBuilder/: CMakeLists.txt  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  MeshletBuilder.cpp  MeshletBuilder.h  main.cpp
