set(APPLICATION_NAME SampleApplication)
set(MODULE_SOURCES 
	main.cpp
)

set(RESOURCE_DIRECTORY_DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")

add_executable(${APPLICATION_NAME}
		${MODULE_SOURCES}
)

target_link_libraries(${APPLICATION_NAME}
	PRIVATE
		Engine
)

get_property(RESOURCES GLOBAL "${RESOURCE}" PROPERTY TOY_RESOURCE_DIR)

foreach(RESOURCE_DIR ${RESOURCES})
    message("Copy resources for ${MODULE_NAME} from ${RESOURCE_DIR} to ${RESOURCE_DIRECTORY_DESTINATION}")
	file(COPY "${RESOURCE_DIR}" DESTINATION ${RESOURCE_DIRECTORY_DESTINATION})
endforeach()